@@ -33,6 +33,7 @@ endif::[]
 [float]
 ===== Bug fixes
 * Fix module loading errors on J9 JVM - {pull}2341[#2341]
+* Fixing log4j configuration error - {pull}2343[#2343]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
